--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,10 @@ android:
     
 before_install:
  - chmod +x gradlew
+ 
+ # Emulator Management: Create, Start and Wait
+before_script:
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
