--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.LoginActivity"
+            android:windowSoftInputMode="stateHidden"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +25,7 @@
         </activity>
         <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.CadastroUsuarioActivity"
+            android:windowSoftInputMode="stateHidden"
             android:label="@string/title_cadastro_usuario"></activity>
     </application>
 </manifest>
