--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.CadastroEnderecoActivity" />
         <activity android:name=".activity.CadastroUsuarioActivity"
             android:windowSoftInputMode="stateHidden"
-            android:label="@string/title_cadastro_usuario"></activity>
+            android:label="@string/title_cadastro_usuario"/>
     </application>
 </manifest>
