--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".activity.LoginActivity"
-            android:label="@string/app_name"
-            android:windowSoftInputMode="stateHidden">
+        <activity android:name=".activity.LoginActivity"
+            android:windowSoftInputMode="stateHidden"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,17 +24,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.MainActivity" />
-        <activity
-            android:name=".activity.CadastroUsuarioActivity"
-            android:label="@string/title_cadastro_usuario"
-            android:windowSoftInputMode="stateHidden" />
-        <activity
-            android:name=".activity.CadastroPetActivity"
-            android:windowSoftInputMode="stateHidden"/>
         <activity android:name=".activity.CadastroEnderecoActivity" />
         <activity android:name=".activity.CadastroUsuarioActivity"
             android:windowSoftInputMode="stateHidden"
             android:label="@string/title_cadastro_usuario"/>
     </application>
-
 </manifest>
