Alterações nas interfaces de cadastros de endereço, fornecedor e pet. Adição de WebService para preencher endereço pelo cep.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="projetaobcc20172.com.projetopetemfoco">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -36,9 +37,6 @@
             android:name=".activity.CadastroFornecedorActivity"
             android:windowSoftInputMode="stateHidden"/>
         <activity android:name=".activity.CadastroEnderecoActivity" />
-        <activity android:name=".activity.CadastroUsuarioActivity"
-            android:windowSoftInputMode="stateHidden"
-            android:label="@string/title_cadastro_usuario"/>
     </application>
 
 </manifest>
