--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".activity.MainActivity" />
 
         <activity
@@ -33,20 +34,21 @@
 
         <activity
             android:name=".activity.CadastroUsuarioActivity"
-            android:label="@string/title_cadastro_usuario"
             android:windowSoftInputMode="stateHidden" />
 
         <activity
             android:name=".activity.CadastroServicoActivity"
-            android:label="@string/title_activity_cadastro_servico"
-            android:theme="@style/AppTheme" />
+            android:windowSoftInputMode="stateHidden"/>
 
         <activity
             android:name=".activity.CadastroFornecedorActivity"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateHidden" />
 
         <activity android:name=".activity.CadastroEnderecoActivity" />
-        
+
+        <activity android:name=".activity.MainActivityFornecedor">
+
+        </activity>
     </application>
 
 </manifest>
