--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,19 +25,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".activity.MainActivity" />
-
         <activity
             android:name=".activity.CadastroPetActivity"
             android:windowSoftInputMode="stateHidden" />
-
         <activity
             android:name=".activity.CadastroUsuarioActivity"
             android:windowSoftInputMode="stateHidden" />
-
         <activity android:name=".activity.CadastroEnderecoActivity" />
-
+        <activity android:name=".activity.PetsActivity"></activity>
     </application>
 
 </manifest>
