--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,11 +32,15 @@ dependencies {
     testCompile 'org.mockito:mockito-core:2.7.22'
     androidTestCompile 'org.mockito:mockito-android:2.7.22'
     compile 'com.google.firebase:firebase-auth:11.6.0'
+    compile 'com.google.android.gms:play-services-auth:11.6.0'
     compile 'com.google.firebase:firebase-database:11.6.0'
     compile 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.facebook.android:facebook-login:[4,5)'
 }
 
 apply plugin: 'com.google.gms.google-services'
+
+
 
 
 
