--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,9 @@
         <activity android:name=".activity.CadastroEnderecoActivity" />
         <activity android:name=".activity.PetsActivity" />
         <activity android:name=".activity.EditarPetActivity"
-            android:windowSoftInputMode="stateHidden"></activity>
+            android:windowSoftInputMode="stateHidden">
+        </activity>
+        <activity android:name=".activity.ListaEstabServicoActivity"/>
     </application>
 
 </manifest>
