Exibe Informações do Estabelecimento

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,8 +34,10 @@
             android:windowSoftInputMode="stateHidden" />
         <activity android:name=".activity.CadastroEnderecoActivity" />
         <activity android:name=".activity.PetsActivity" />
-        <activity android:name=".activity.EditarPetActivity"
-            android:windowSoftInputMode="stateHidden"></activity>
+        <activity
+            android:name=".activity.EditarPetActivity"
+            android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".activity.AcessoInformacoesEstabelecimentoActivity"></activity>
     </application>
 
 </manifest>
