--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
 
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
     dependencies {
@@ -14,6 +15,8 @@ buildscript {
         // in the individual module build.gradle files
         classpath 'com.google.gms:google-services:3.1.0'
     }
+
+
 }
 
 allprojects {
@@ -23,6 +26,10 @@ allprojects {
     }
 }
 
+
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
