--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,8 +34,12 @@
             android:windowSoftInputMode="stateHidden" />
         <activity android:name=".activity.CadastroEnderecoActivity" />
         <activity android:name=".activity.PetsActivity" />
-        <activity android:name=".activity.EditarPetActivity"
-            android:windowSoftInputMode="stateHidden"></activity>
+        <activity
+            android:name=".activity.EditarPetActivity"
+            android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".activity.InfoPetActivity" />
+        <activity android:name=".activity.CalendarioVacinasActivity" />
+        <activity android:name=".activity.CadastroVacinaActivity"></activity>
     </application>
 
 </manifest>
