--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -47,8 +47,6 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.MainActivity" />
-
         <activity android:name=".activity.NavigatorMenu" />
         <activity
             android:name=".activity.CadastroPetActivity"
@@ -63,15 +61,13 @@
             android:windowSoftInputMode="stateHidden" />
         <activity android:name=".activity.AvalicoesEstabelecimentoActivity"
             android:windowSoftInputMode="stateHidden" />
-         <activity android:name=".activity.PetsActivity" />
+
         <activity
             android:name=".activity.EditarPetActivity"
             android:windowSoftInputMode="stateHidden" />
         <activity android:name=".activity.InfoPetActivity" />
         <activity android:name=".activity.CalendarioVacinasActivity" />
         <activity android:name=".activity.CadastroVacinaActivity"></activity>
-
-        <activity android:name=".activity.EnderecoActivity" />
 
         <activity
             android:name=".activity.EditarEnderecoActivity"
