--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,13 @@
     package="projetaobcc20172.com.projetopetemfoco">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="com.example.permission.MAPS_RECEIVE"/>
 
     <application
         android:allowBackup="false"
@@ -18,6 +21,10 @@
 
         <meta-data android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id"/>
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/google_maps_key"/>
 
         <activity android:name="com.facebook.FacebookActivity"
             android:configChanges=
@@ -47,32 +54,60 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.NavigatorMenu" />
+        <activity
+            android:name=".activity.NavigatorMenu"
+            />
+
         <activity
             android:name=".activity.CadastroPetActivity"
-            android:windowSoftInputMode="stateHidden" />
+            android:windowSoftInputMode="stateHidden"
+            />
 
-        <activity android:name=".activity.CadastroEnderecoActivity"
-            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".activity.CadastroEnderecoActivity"
+            android:windowSoftInputMode="stateHidden"
+            />
 
-        <activity android:name=".activity.AcessoInformacoesEstabelecimentoActivity"
-            android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".activity.AvaliarEstabelecimentoActivity"
-            android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".activity.AvalicoesEstabelecimentoActivity"
-            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".activity.AcessoInformacoesEstabelecimentoActivity"
+            android:windowSoftInputMode="stateHidden"
+            />
+
+        <activity
+            android:name=".activity.AvaliarEstabelecimentoActivity"
+            android:windowSoftInputMode="stateHidden"
+            />
+
+        <activity
+            android:name=".activity.AvalicoesEstabelecimentoActivity"
+            android:windowSoftInputMode="stateHidden"
+            />
 
         <activity
             android:name=".activity.EditarPetActivity"
-            android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".activity.InfoPetActivity" />
-        <activity android:name=".activity.CalendarioVacinasActivity" />
-        <activity android:name=".activity.CadastroVacinaActivity"></activity>
+            android:windowSoftInputMode="stateHidden"
+            />
+
+        <activity
+            android:name=".activity.InfoPetActivity"
+            />
+
+        <activity
+            android:name=".activity.CalendarioVacinasActivity"
+            />
+
+        <activity
+            android:name=".activity.CadastroVacinaActivity"
+            />
 
         <activity
             android:name=".activity.EditarEnderecoActivity"
-            android:windowSoftInputMode="stateHidden"/>
-        <activity android:name=".activity.ListaEstabServicoActivity" />
+            android:windowSoftInputMode="stateHidden"
+            />
+
+        <activity
+            android:name=".activity.ListaEstabServicoActivity"
+            />
 
     </application>
 
