--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="false"
@@ -45,7 +46,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".activity.MainActivity" />
         <activity
             android:name=".activity.CadastroPetActivity"
@@ -62,7 +62,6 @@
         <activity
             android:name=".activity.AvalicoesEstabelecimentoActivity"
             android:windowSoftInputMode="stateHidden" />
-
         <activity
             android:name=".activity.EditarPetActivity"
             android:windowSoftInputMode="stateHidden" />
@@ -75,6 +74,9 @@
         <activity android:name=".activity.ListaEstabServicoActivity" />
         <activity
             android:name=".activity.FiltroServicoDialog"
+            android:theme="@style/Base.Theme.AppCompat.Light.Dialog" />
+        <activity
+            android:name=".activity.FiltroEstabelecimentoActivity"
             android:theme="@style/Base.Theme.AppCompat.Light.Dialog" />
     </application>
 
