Alteração do layout da exibição dos pets. Alteração do layout da exibição das vacinas. Alteração do layout da exibição dos endereços. Alteração geral do layout do aplicativo. Adicionado opção para escolher a foto do pet. Classes refatoradas para salvar pets, vacinas e endereços em nós diferentes no banco.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,27 +15,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
 
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
-
-        <activity android:name="com.facebook.FacebookActivity"
-            android:configChanges=
-                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
-
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-
-
         <activity
             android:name=".activity.LoginActivity"
             android:label="@string/app_name"
@@ -46,34 +45,40 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".activity.MainActivity" />
+        <activity
+            android:name=".activity.MainActivity"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activity.CadastroPetActivity"
             android:windowSoftInputMode="stateHidden" />
-
-        <activity android:name=".activity.CadastroEnderecoActivity"
+        <activity
+            android:name=".activity.CadastroEnderecoActivity"
             android:windowSoftInputMode="stateHidden" />
-
-        <activity android:name=".activity.AcessoInformacoesEstabelecimentoActivity"
+        <activity
+            android:name=".activity.AcessoInformacoesEstabelecimentoActivity"
             android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".activity.AvaliarEstabelecimentoActivity"
+        <activity
+            android:name=".activity.AvaliarEstabelecimentoActivity"
             android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".activity.AvalicoesEstabelecimentoActivity"
+        <activity
+            android:name=".activity.AvalicoesEstabelecimentoActivity"
             android:windowSoftInputMode="stateHidden" />
-
         <activity
             android:name=".activity.EditarPetActivity"
             android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".activity.InfoPetActivity" />
+        <activity
+            android:name=".activity.InfoPetActivity"
+            android:windowSoftInputMode="stateHidden" />
         <activity android:name=".activity.CalendarioVacinasActivity" />
-        <activity android:name=".activity.CadastroVacinaActivity"></activity>
-
+        <activity
+            android:name=".activity.CadastroVacinaActivity"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activity.EditarEnderecoActivity"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateHidden" />
         <activity android:name=".activity.ListaEstabServicoActivity" />
-
+        <activity android:name=".activity.InfoVacinaActivity" />
+        <activity android:name=".activity.InfoEnderecoActivity"></activity>
     </application>
 
 </manifest>
