--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="com.example.permission.MAPS_RECEIVE"/>
-
-
+    <uses-permission android:name="com.example.permission.MAPS_RECEIVE" />
 
     <application
         android:allowBackup="false"
@@ -20,31 +18,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
-
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="@string/google_maps_key"/>
+            android:value="@string/google_maps_key" />
 
-        <activity android:name="com.facebook.FacebookActivity"
-            android:configChanges=
-                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
-
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-
-
         <activity
             android:name=".activity.LoginActivity"
             android:label="@string/app_name"
@@ -60,65 +56,45 @@
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activity.CadastroPetActivity"
-            android:windowSoftInputMode="stateHidden"
-            />
-
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activity.CadastroEnderecoActivity"
-            android:windowSoftInputMode="stateHidden"
-            />
-
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activity.AcessoInformacoesEstabelecimentoActivity"
-            android:windowSoftInputMode="stateHidden"
-            />
-
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activity.AvaliarEstabelecimentoActivity"
-            android:windowSoftInputMode="stateHidden"
-            />
-
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activity.AvalicoesEstabelecimentoActivity"
-            android:windowSoftInputMode="stateHidden"
-            />
-
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activity.EditarPetActivity"
-            android:windowSoftInputMode="stateHidden"
-            />
-
-        <activity
-            android:name=".activity.InfoPetActivity"
-            />
-
-        <activity
-            android:name=".activity.CalendarioVacinasActivity"
-            />
-
-        <activity
-            android:name=".activity.CadastroVacinaActivity"
-            />
-
+            android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".activity.InfoPetActivity" />
+        <activity android:name=".activity.CalendarioVacinasActivity" />
+        <activity android:name=".activity.CadastroVacinaActivity" />
         <activity
             android:name=".activity.EditarEnderecoActivity"
-            android:windowSoftInputMode="stateHidden"
-            />
-
-        <activity
-            android:name=".activity.ListaEstabServicoActivity"
-            /><![CDATA[
+            android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".activity.ListaEstabServicoActivity" />
+        <![CDATA[
 
             android:windowSoftInputMode="stateHidden" />
         ]]>
         <activity android:name=".activity.InfoVacinaActivity" />
-        <activity android:name=".activity.InfoEnderecoActivity"></activity>
+        <activity android:name=".activity.InfoEnderecoActivity" />
         <activity
             android:name=".activity.FiltroServicoDialog"
             android:theme="@style/Base.Theme.AppCompat.Light.Dialog" />
         <activity
             android:name=".activity.FiltroEstabelecimentoActivity"
             android:theme="@style/Base.Theme.AppCompat.Light.Dialog" />
+        <activity
+            android:name=".activity.AvaliarServicoActivity"
+            android:label="@string/title_activity_avaliar_servico"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
