--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.facebook.android:facebook-login:[4,5)'
     compile 'com.google.android.gms:play-services-maps:11.6.0'
+    compile "com.android.support:recyclerview-v7:26.1.0"
+    compile 'com.android.support:cardview-v7:26.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
