--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,11 +54,14 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.github.bumptech.glide:glide:3.8.0'
     compile 'de.hdodenhof:circleimageview:2.2.0'
+    compile 'com.github.sundeepk:compact-calendar-view:2.0.2.2'
     implementation 'com.facebook.android:facebook-login:[4,5)'
     compile 'com.google.android.gms:play-services-maps:11.6.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
+
+
 
 
 
