Modificação no layout Exibir Informações do Estabelecimento, avaliação de serviços

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,13 +61,13 @@
             android:name=".activity.CadastroEnderecoActivity"
             android:windowSoftInputMode="stateHidden" />
         <activity
-            android:name=".activity.AcessoInformacoesEstabelecimentoActivity"
+            android:name=".activity.ExibiInformacoesEstabelecimentoActivity"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activity.AvaliarEstabelecimentoActivity"
             android:windowSoftInputMode="stateHidden" />
         <activity
-            android:name=".activity.AvalicoesEstabelecimentoActivity"
+            android:name=".activity.ExibiAvalicoesEstabelecimentoActivity"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activity.EditarPetActivity"
@@ -94,7 +94,8 @@
         <activity
             android:name=".activity.AvaliarServicoActivity"
             android:label="@string/title_activity_avaliar_servico"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".activity.ExibiAvalicoesServicosActivity"></activity>
     </application>
 
 </manifest>
