--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,13 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:11.6.0'
     compile "com.android.support:recyclerview-v7:26.1.0"
     compile 'com.android.support:cardview-v7:26.1.0'
+
+    compile 'com.android.support:support-v4:26.1.0'
+    compile 'br.com.uol.pslibs:android-checkout-transparent-in-app:0.0.1'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
+    compile 'org.adw.library:discrete-seekbar:1.0.1'
+    compile 'com.github.sharish:CreditCardView:v1.0.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
