--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+
+    xmlns:tools="http://schemas.android.com/tools"
     package="projetaobcc20172.com.projetopetemfoco">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
@@ -12,6 +14,10 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="com.example.permission.MAPS_RECEIVE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <application
         android:allowBackup="false"
@@ -19,7 +25,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:replace="android:allowBackup">
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
@@ -81,10 +88,7 @@
             android:name=".activity.EditarEnderecoActivity"
             android:windowSoftInputMode="stateHidden" />
         <activity android:name=".activity.ListaEstabServicoActivity" />
-        <![CDATA[
 
-            android:windowSoftInputMode="stateHidden" />
-        ]]>
         <activity android:name=".activity.InfoVacinaActivity" />
         <activity android:name=".activity.InfoEnderecoActivity" />
         <activity
@@ -94,8 +98,15 @@
             android:name=".activity.FiltroEstabelecimentoActivity"
             android:theme="@style/Base.Theme.AppCompat.Light.Dialog" />
         <activity android:name=".activity.VisualizarPromocaoActivity"></activity>
-        <activity android:name=".activity.InfoServicoActivity" />
         <activity android:name=".activity.ContratarServicoActivity"></activity>
+        <activity
+            android:name=".activity.InfoServicoActivity" />
+
+        <activity android:name="com.cooltechworks.creditcarddesign.CardEditActivity"
+            android:screenOrientation="portrait"
+            />
+
+
     </application>
 
 </manifest>
