[#152975373] (Notificação) Como consumidor, eu posso obter promoções próximas a minha localidade, para maior comodidade.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,7 +105,11 @@
         <activity android:name=".activity.ExibiAvalicoesServicosActivity" />
         <activity android:name=".activity.InfoServicoActivity" />
         <activity android:name=".activity.ContratarServicoActivity" />
-        <activity android:name=".activity.OpcoesPromocoes"></activity>
+        <activity android:name=".activity.OpcoesPromocoes"
+            android:theme="@style/Base.Theme.AppCompat.Light.Dialog"   />
+        <service
+            android:name=".activity.FeedPromocoesFragment$BuscarPromocaoAss"
+            android:exported="false"/>
     </application>
 
 </manifest>
