--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,13 +70,13 @@
             android:name=".activity.CadastroEnderecoActivity"
             android:windowSoftInputMode="stateHidden" />
         <activity
-            android:name=".activity.AcessoInformacoesEstabelecimentoActivity"
+            android:name=".activity.ExibiInformacoesEstabelecimentoActivity"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activity.AvaliarEstabelecimentoActivity"
             android:windowSoftInputMode="stateHidden" />
         <activity
-            android:name=".activity.AvalicoesEstabelecimentoActivity"
+            android:name=".activity.ExibiAvalicoesEstabelecimentoActivity"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activity.EditarPetActivity"
@@ -98,10 +98,13 @@
             android:name=".activity.FiltroEstabelecimentoActivity"
             android:theme="@style/Base.Theme.AppCompat.Light.Dialog" />
         <activity android:name=".activity.VisualizarPromocaoActivity"></activity>
-        <activity android:name=".activity.ContratarServicoActivity"></activity>
         <activity
-            android:name=".activity.InfoServicoActivity" />
-
+            android:name=".activity.AvaliarServicoActivity"
+            android:label="@string/title_activity_avaliar_servico"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".activity.ExibiAvalicoesServicosActivity"></activity>
+        <activity android:name=".activity.InfoServicoActivity" />
+        <activity android:name=".activity.ContratarServicoActivity"></activity>
         <activity android:name="com.cooltechworks.creditcarddesign.CardEditActivity"
             android:screenOrientation="portrait"
             />
